# kpi-agent-core

./: .gitignore  README.md  pyproject.toml  requirements.txt
scripts/: run_checklist_to_json.py  run_embed.py
src/: __init__.py  embeddings.py  graph.py  models.py  prompts.py
src/kpi_agent_core/: __init__.py  cascade_to_table.py  checklist_to_json.py  doc_preprocess.py  embeddings.py  prompts.py  retrieval.py
