[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kpi-agent-core"
version = "0.1.0"
description = "Ядро AI KPI: каскадирование целей, граф сценариев, промпты"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "httpx>=0.26.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
